--- a/src/app/component/test/MediaStyle.css
+++ b/src/app/component/test/MediaStyle.css
@@ -1,15 +1,11 @@
-.video_input_field {
-    display: none;
-}
-
-.video_input_video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-}
-.video_wrapper{
+.player-wrapper {
     position: relative;
-    padding-top: 56.25% 
+    padding-top: 56.25%
+        /* Player ratio: 100 / (1280 / 720) */
 }
 
+.react-player {
+    position: absolute;
+    top: 2rem;
+    left: 0;
+}
